[build-system]
requires = ["setuptools>=61.0", "aiohttp==3.8.5"]
build-backend = "setuptools.build_meta"

[project]
name = "olarm_api_rainepretorius"
version = "1.0.0"
authors = [
  { name="Raine Pretorius", email="raine.pretorius1@gmail.com" },
]
description = "A package to interact with the Olarm API"
readme = "README.md"
requires-python = ">=3.11"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: BSD License",
    "Operating System :: OS Independent",
]

[project.urls]
"Homepage" = "https://github.com/rainepretorius/olarm_python_package"
"Bug Tracker" = "https://github.com/rainepretorius/olarm_python_package/issues"